[package]
name = "rstest-log"
version = "0.1.1"
authors = ["David R. Morrison <drmorr@appliedcomputing.io>"]
edition = "2024"
rust-version = "1.86"
license = "MIT"
readme = "README.md"
description = "A wrapper around the test_log crate that supports rstest"

[workspace]
members = ["macros"]

[dependencies]
rstest-log-macros = { path = "macros", version = "0.1.1" }

[dev-dependencies]
logging = { version = "0.4.8", package = "log" }
rstest = "0.25.0"
test-log = { version = "0.2.17", features = ["log", "color", "trace"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.20"
