[package]
name = "rstest-log-macros"
version = "0.1.0"
authors = ["David R. Morrison <drmorr@appliedcomputing.io>"]
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "Proc macros for the rstest-log crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.32", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }
